deploy/certification/flightpath/kubevirt-smoke.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: launchpad-kubevirt-smoke
  labels:
    app.kubernetes.io/managed-by: launchpad-certification
    launchpad.redhat.com/cluster: flightpath
